<resources>
    <string name="app_name">PINSA</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="acceder">Acceder</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_tabs__atemperado">Tabs_Atemperado</string>
    <string name="title_activity_tabs__descongelado">Tabs_Descongelado</string>
    <string name="title_activity_tabs__preselecion">Tabs_Preselecion</string>

    <string name="turno">Seleccione un turno ha desempeñar de las siguientes opciones</string>

    <string name="OM">Orden\nmantenimiento</string>
    <string name="TiempoMuerto">Tiempo muerto</string>
    <string name="disenoPlan">Diseño de plan</string>
    <string name="Salida">Salida tinas</string>
    <string name="controlProcesoDescongelado">Control proceso\ndescongelado</string>
    <string name="Pinza">Pinsa</string>
    <string name="asignaCocida">Asigna cocida</string>
    <string name="asignaTina">Selección manual</string>
    <string name="cocidaInicial">Cocida inicial</string>

    <string name="controlProceso">Control Proceso Descongelado</string>
    <string name="liberarTina">Liberar Tina</string>
    <string name="asignarTina">Asignar Tina</string>
    <string name="mezclarTina">Mezclar Tinas</string>
    <string name="liberarUsuario">Liberar Operador</string>
    <string name="liberarOperadores">Liberar Operadores</string>
    <string name="asignarUsuario">Asignar Operador</string>
    <string name="vistaPanoramica">Vista Panorámica</string>
    <string name="asignarMontacargas">Operador Montacargas</string>
    <string name="asignarTurno">Asignar Turno</string>
    <string name="volver">Regresar</string>
    <string name="completo">Completo</string>
    <string name="guardar">Guardar</string>
    <string name="compensacion">Compensación</string>
    <string name="graficar">Graficar</string>
    <string name="iniciar">Iniciar</string>
    <string name="salidaCarritos">Salida Carritos</string>
    <string name="registrar">Registrar</string>
    <string name="registrarSalida">Registrar Salida</string>
    <string name="agregar">Agregar</string>

    <string name="crearOrden">Crear orden de mantenimiento</string>
    <string name="ordenMantenimiento">Orden de mantenimiento</string>
    <string name="mensajeArtefactos">Elija el o los componentes de la maquinaria que deben revisarse</string>

    <string name="mensajeMezclar">Marque las tinas que desee mezclar en la tina elegida</string>
    <string name="decisionMezclar">¿Está de acuerdo en mezclar las tinas seleccionadas?</string>
    <string name="mezclarSubtallasDistintas">Las tinas seleccionadas contienen subtallas distintas.\n¿Está de acuerdo en mezclar las tinas seleccionadas?</string>
    <string name="mensajeTinasMezcladas">Tinas mezcladas</string>
    <string name="tinasLiberadas">Posiciones liberadas</string>
    <string name="mensajeErrorEscaneo">El dato no existe</string>
    <string name="mensajeErrorInactivo">La tina esta inactiva</string>

    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="completa">Completa</string>

    <string name="preseleccion">Preselección</string>
    <string name="atemperador">Atemperado</string>
    <string name="descongelado">Descongelado</string>
    <string name="eviscerar">Eviscerado</string>
    <string name="emparrillado">Emparrillado</string>
    <string name="modulos">Módulos</string>
    <string name="temperatura">Temperatura</string>
    <string name="estatusCocedor">Estatus cocedor</string>
    <string name="lavadoCarros">Lavado de carros</string>
    <string name="movimieto">Movimiento de personal</string>
    <string name="control">Control de proceso manual</string>
    <string name="cocimiento">Cocimiento</string>
    <string name="enfriamiento">Enfriamiento</string>

    <string name="asignarMecanico">Asignar mecánico</string>
    <string name="cerrarTiempo">Cerrar tiempo</string>
    <string name="finalizaOrden">Finalizar</string>
    <string name="detalle">Detalle</string>
    <string name="liberarCompleta">L. Completa</string>
    <string name="detalleEstiba">Detalle estiba</string>

    <string name="title_activity_navegador">Nombre Usuario</string>
    <string name="titulo_componentes">Selecciona componentes a revisar</string>
    <string name="titulo_vista">Vista panorámica</string>
    <string name="titulo_inventario">Selecciona carritos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
