<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/botonPreseleccion"
            style="@style/botonMenu"
            android:text="@string/preseleccion"/>

        <Button
            android:id="@+id/botonAtemperado"
            style="@style/botonMenu"
            android:layout_marginTop="15dp"
            android:text="@string/atemperador"/>

        <Button
            android:id="@+id/botonDescongelado"
            style="@style/botonMenu"
            android:layout_marginTop="15dp"
            android:text="@string/descongelado"/>

        <Button
            android:id="@+id/botonEviscerado"
            style="@style/botonMenu"
            android:layout_marginTop="15dp"
            android:text="@string/eviscerar"/>

        <Button
            android:id="@+id/botonEmparrillado"
            style="@style/botonMenu"
            android:layout_marginTop="15dp"
            android:text="@string/emparrillado"/>

        <Button
            android:id="@+id/botonMovimiento"
            style="@style/botonMenu"
            android:layout_marginTop="15dp"
            android:text="@string/movimieto"/>

        <Button
            android:id="@+id/botonControl"
            style="@style/botonMenu"
            android:layout_marginTop="15dp"
            android:text="@string/control"/>

    </LinearLayout>

</RelativeLayout>