<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/no_selecion"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mensajeArtefactos"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textSize="17dp"/>

            <ListView
                android:id="@+id/listaArtefactos"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_maquinaria_artefactos"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="bottom">

            <Button
                android:id="@+id/botonCancelar"
                android:text="@string/cancelar"
                style="@style/botonAccion"/>

            <Button
                android:id="@+id/botonAceptar"
                android:text="@string/aceptar"
                style="@style/botonAccion"/>

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
