<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="170dp"
            android:layout_height="170dp"
            app:srcCompat="@drawable/pinsa_sin_fondo"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/usuario"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/usuario" />

        <EditText
            android:id="@+id/contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/contrasena"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="Turno"
            android:textColor="@color/negro"
            android:textSize="15dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_sunrise"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:text="1"
                android:textColor="@color/negro"
                android:textSize="17dp"/>

            <Switch
                android:id="@+id/switchTurno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textOn="1"
                android:textOff="2"
                android:thumbTint="@color/colorPrimary"
                android:trackTint="@color/no_selecion" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:text="2"
                android:textColor="@color/negro"
                android:textSize="17dp"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_sunset"/>

        </LinearLayout>

        <Button
            android:id="@+id/acceder"
            style="@style/botonPrincipal"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/acceder"/>

        <ProgressBar
            android:id="@+id/barraProgreso"
            style="?android:attr/progressBarStyle"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            android:indeterminateTint="@color/colorPrimary"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>