<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/no_selecion">

    <TextView
        android:id="@+id/etiquetaMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/negro"
        android:gravity="center"
        android:text="@string/mensajeTinasMezcladas"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="18dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/fondo_tina_principal"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="Tina Principal"
                android:textColor="@color/blanco"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/etiquetaTinaSeleccionada"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/fondo_tina_principal"
                android:gravity="center"
                android:padding="5dp"
                android:text="A1"
                android:textColor="@color/blanco"
                android:textSize="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/fondo_tina_principal"
                    android:gravity="left"
                    android:padding="5dp"
                    android:text="Tinas mezcladas"
                    android:textColor="@color/blanco"
                    android:textSize="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/fondo_tina_principal"
                    android:gravity="left"
                    android:padding="5dp"
                    android:text="Sub. mezcladas"
                    android:textColor="@color/blanco"
                    android:textSize="10dp" />

            </LinearLayout>

            <ListView
                android:id="@+id/listaSubtallas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blanco" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/negro"
        android:gravity="center"
        android:text="@string/tinasLiberadas"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="18dp"/>

    <ListView
        android:id="@+id/listaLiberadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@color/blanco" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:gravity="bottom">

        <Button
            android:id="@+id/boton1"
            android:text="@string/aceptar"
            style="@style/botonAccion"/>

    </LinearLayout>

</LinearLayout>