<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".preselecion.Fragment_Preselecion_Tinas">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/actualizar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/operador1"
                            style="@style/operador" />

                        <ImageView
                            android:id="@+id/operador2"
                            style="@style/operador" />

                        <ImageView
                            android:id="@+id/operador3"
                            style="@style/operador" />

                        <ImageView
                            android:id="@+id/operador4"
                            style="@style/operador" />

                        <ImageView
                            android:id="@+id/operador5"
                            style="@style/operador" />

                        <ImageView
                            android:id="@+id/operador6"
                            style="@style/operador" />

                        <ImageView
                            android:id="@+id/operador7"
                            style="@style/operador" />

                        <ImageView
                            android:id="@+id/operador8"
                            style="@style/operador" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/listaCocedores"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:listitem="@layout/card_cocimiento_cocedor"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

            <LinearLayout
                android:id="@+id/contenedorBotones"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:gravity="bottom"
                android:visibility="invisible">

                <Button
                    android:id="@+id/boton1"
                    android:text="@string/liberarUsuario"
                    style="@style/botonAccion"/>

                <Button
                    android:id="@+id/boton2"
                    android:text="@string/asignarUsuario"
                    style="@style/botonAccion"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/contenedorTurno"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:layout_marginTop="5dp"
                android:gravity="bottom"
                android:visibility="gone">

                <Button
                    android:id="@+id/botonTurno"
                    android:text="@string/liberarOperadores"
                    style="@style/botonAccion"/>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ProgressBar
                android:id="@+id/barraProgreso"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                android:indeterminateTint="@color/colorPrimary"/>

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
