<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/no_selecion">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/crearOrden"
                    android:textColor="@color/negro"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:textSize="17dp"/>

                <TextView
                    android:id="@+id/etiquetaFecha"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:textColor="@color/negro"
                    android:gravity="center"
                    android:layout_marginTop="1dp"
                    android:textSize="13dp"/>

                <Spinner
                    android:id="@+id/seleccionMaquinaria"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/colorAccent"/>

                <Button
                    android:id="@+id/botonArtefactos"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:background="@color/colorAccent"
                    android:text="Seleccionar componentes"
                    android:textSize="15dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textAllCaps="false"
                    android:gravity="left" />

                <ListView
                    android:id="@+id/listaArtefactos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:visibility="gone"
                    android:background="@color/colorAccent"
                    tools:listitem="@layout/item_artefacto_orden"/>

                <EditText
                    android:id="@+id/campoDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="Descripción del problema"
                    android:gravity="top"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@color/colorAccent"
                    android:textSize="15dp"
                    android:paddingTop="4dp"
                    android:paddingLeft="5dp"
                    android:paddingBottom="4dp"
                    android:lines="10">
                    <requestFocus/>
                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:layout_marginTop="20dp"
                android:gravity="bottom">

                <Button
                    android:id="@+id/boton1"
                    android:text="@string/cancelar"
                    style="@style/botonAccion"/>

                <Button
                    android:id="@+id/boton2"
                    android:text="@string/aceptar"
                    style="@style/botonAccion"/>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ProgressBar
                android:id="@+id/barraProgreso"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                android:indeterminateTint="@color/colorPrimary"/>

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>